--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ p {
 
 #Oque .items {
   display: flex;
-  padding: 0 1rem 1rem 1rem;
+  padding: 0 1rem 1rem 0;
   margin-bottom: 2rem;
 }
 
@@ -183,6 +183,11 @@ p {
   padding: 1rem;
   border-radius: 50%;
   margin-bottom: 1rem;
+  width: 64px;
+}
+
+.last-item {
+  padding: 1rem 1rem 1rem 0.8rem !important;
 }
 
 /* Quem somos */
